# vbassigment

./: .env.example  .gitignore  README.md  datamodels.py  main.py  pyproject.toml  queries.py  requirements.txt  setup.cfg  setup.py  sql_execution.py
notebooks/: payment.ipynb  portfolio.ipynb  results.ipynb  vintage.ipynb
src/: __init__.py  config.py  datamodels.py  helper.py  queries.py  results.ipynb  sql_execution.py  utils.py  visualization.py
src/vb/: __init__.py  config.py  queries.py  sql_execution.py
tests/: test_executor.py
