[project]
name = "viabill-analysis"
version = "0.1.0"
dependencies = [
    "pandas",
    "matplotlib",
    "pydantic",
    "jupyter",
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"